.provarCaches/00D6C0000000xA6UAI/objects/SIC__c.object
<CustomObject>
    <description>Storage for SIC Data</description>
    <fields>
        <fullName>Division_Description__c</fullName>
        <label>Division Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Group_Description__c</fullName>
        <description>2 Digit Description</description>
        <label>Major Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Group__c</fullName>
        <description>2 Digit Code</description>
        <label>Major Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <description>4 Digit Description</description>
        <label>SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SIC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Division_Description__c</columns>
        <columns>Major_Group_Description__c</columns>
        <columns>SIC_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SIC Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>